testing paralax background

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <h1>Welcome to My Website</h1>
     </header>
 
+    <div class="parallax img1"></div>
+
 
     <main>
         <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>
-        
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>    
     </main>
 
     <footer>
