--- a/index.html
+++ b/index.html
@@ -9,39 +9,33 @@
         
     <style>
         
-    </style>
+        </style>
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Proposal</a></li>
-            <li class="rightAlign"><a href="#about">About the Authors</a></li>
+            <li class="rightAlign"><a href="#">About the Authors</a></li>
         </ul>
     </nav>
-
-    <div class="margincontainer">
-        <div class="image">
-            <image src="images/potato.jpg" width="100%" alt="potato"></image>
-        </div>
-
-        <header>
-            <h1>Welcome to My Website</h1>
-        </header>
-
-        <div class="parallax img1"></div>
-
-
-        <main>
-            <h2 id="about">About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>    
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>
-        </main>
-
-        <footer>
-            <p>&copy; 2022 My Website. All rights reserved.</p>
-        </footer>
+    <div class="image">
+        <image src="images/potato.jpg" width="100%" alt="potato"></image>
     </div>
+
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+
+
+    <main>
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2022 My Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
