--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Potato Site</title>
+        <title>Potato</title>
         <link rel="stylesheet" href="style.css">
     </head>
         
@@ -15,10 +15,14 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Proposal</a></li>
+            <li class="rightAlign"><a href="#">About the Authors</a></li>
         </ul>
     </nav>
+    <div class="image">
+        <image src="images/potato.jpg" width="100%" alt="potato"></image>
+    </div>
+
     <header>
         <h1>Welcome to My Website</h1>
     </header>
@@ -27,7 +31,6 @@
     <main>
         <h2>About Me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>
-        
     </main>
 
     <footer>
