--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Proposal</a></li>
-            <li class="rightAlign"><a href="#">About the Authors</a></li>
+            <li class="rightAlign"><a href="#about">About the Authors</a></li>
         </ul>
     </nav>
     <div class="image">
@@ -31,7 +31,7 @@
 
 
     <main>
-        <h2>About Me</h2>
+        <h2 id="about">About Me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>    
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>
     </main>
