fixed margin for nav bar

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Potato</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-        
-    <style>
-        
-        </style>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Potato</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <ul>
@@ -19,23 +16,27 @@
             <li class="rightAlign"><a href="#">About the Authors</a></li>
         </ul>
     </nav>
-    <div class="image">
-        <image src="images/potato.jpg" width="100%" alt="potato"></image>
+
+    <div class="margincontainer">
+        <div class="image">
+            <image src="images/potato.jpg" width="100%" alt="potato"></image>
+        </div>
+
+        <header>
+            <h1>Welcome to My Website</h1>
+        </header>
+
+
+        <main>
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris
+                nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>
+        </main>
+
+        <footer>
+            <p>&copy; 2022 My Website. All rights reserved.</p>
+        </footer>
     </div>
-
-    <header>
-        <h1>Welcome to My Website</h1>
-    </header>
-
-
-    <main>
-        <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc id aliquet lacinia, mauris nunc tincidunt urna, vitae aliquam nunc nisl in nunc.</p>
-    </main>
-
-    <footer>
-        <p>&copy; 2022 My Website. All rights reserved.</p>
-    </footer>
 </body>
-</html>
 
+</html>
