--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
         </div>
     </div>
 
-    <button class="btn" id="survey" from PIL import Image
-
-    onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
+    <button class="btn" id="survey" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
     
 
 
