made cursor change on nav hover

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a id="scrollButton" data-id="#proposed">Proposal</a></li>
-            <li><a id="scrollButton" data-id="#survey">Our Survey</a></li>
+            <li><a class="scrollButton" data-id="#proposed">Proposal</a></li>
+            <li><a class="scrollButton" data-id="#survey">Our Survey</a></li>
             <li class="rightAlign"><a href="#proposed">About the Authors</a></li>
         </ul>
     </nav>
@@ -24,7 +24,7 @@
     </div>
 
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1 id="test">Welcome to My Website</h1>
     </header>
 
 
