--- a/index.html
+++ b/index.html
@@ -5,21 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potato</title>
+    <link rel="stylesheet" href="sidenav.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="scrollButton" data-id="#proposed">Proposal</a></li>
-            <li><a class="scrollButton" data-id="#survey">Our Survey</a></li>
-            <li class="rightAlign"><a href="#proposed">About the Authors</a></li>
+            <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            
+            <li class="rightAlign"><a href="authors.html">About the Authors</a></li>
+            <li class="rightAlign"><a href="Testing.html">Testing Page</a></li>
         </ul>
     </nav>
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a class="sidenavItem" id="scrollToTop"><b>Home</b></a>
+        <a class="scrollButton sidenavItem" data-id="#proposed">Proposal</a>
+        <a class="scrollButton sidenavItem" data-id="#survey">Our Survey</a>
+
+    </div>
+
     <div class="parallax">
         <div class="caption">
-            <span class="border">Scroll Down for Potato 🥔</span>
+            <span class="border">Scroll Down for Potato<a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
         </div>
     </div>
 
@@ -86,7 +96,7 @@
 
     <script src="script.js"></script>
     <footer>
-        <p>&copy; 2022 My Website. All rights reserved.</p>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
 </body>
 
