--- a/TotallyLegitWebpage.html
+++ b/TotallyLegitWebpage.html
@@ -114,7 +114,7 @@
     <div id="highscore"></div>
     <div id="home-screen">
         <button id="start-button" onclick="startGame()">Start</button>
-        <button id="quit" onclick="window.location.href='index.html'">Quit</button>
+        <button id="quit" onclick="window.location.href='tomothy07.github.io'">Quit</button>
     </div>
     <script>
         let score = 0;
@@ -128,7 +128,7 @@
 
             const potato = document.createElement('div');
             potato.classList.add('potato');
-            potato.style.width = `${Math.random() * 50 + 25}px`; // Random width between 50px and 100px
+            potato.style.width = `${Math.random() * 100 + 25}px`; // Random width between 50px and 100px
             potato.style.height = potato.style.width; // Set height equal to width
             potato.style.left = `${Math.random() * 100}vw`; // Random horizontal position
             document.getElementById('potatoes').appendChild(potato);
@@ -159,7 +159,7 @@
             potato.addEventListener('click', () => {
                 potato.remove();
 
-                if (potato.style.width.slice(0, -2) < 50) {
+                if (potato.style.width.slice(0, -2) < 100) {
                     score += 2;
                 } else {
                     score++;
