--- a/authors.html
+++ b/authors.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="tomothy07.github.io">Home</a></li>
             
             <li class="rightAlign active"><a href="authors.html">About the Authors</a></li>
             <li class="rightAlign"><a href="Testing.html">Testing Page</a></li>
