--- a/authors.html
+++ b/authors.html
@@ -21,8 +21,9 @@
     </nav>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a class="scrollButton" data-id="#proposed">Proposal</a>
-        <a class="scrollButton" data-id="#survey">Our Survey</a>
+        <a class="sidenavItem" id="scrollToTop"><b>Home</b></a>
+        <a class="sidenavItem" href="#proposed" data-id="#proposed">Proposal</a>
+        <a class="sidenavItem" href="#survey" data-id="#survey">Our Survey</a>
 
     </div>
     
