--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
-            <li class="active"><a href="tomothy07.github.io">Home</a></li>
+            <li class="active"><a href="https://tomothy07.github.io">Home</a></li>
             
             <li class="rightAlign"><a href="authors.html">About the Authors</a></li>
             <li class="rightAlign"><a href="Testing.html">Testing Page</a></li>
@@ -22,14 +22,14 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a class="sidenavItem" id="scrollToTop"><b>Home</b></a>
-        <a class="scrollButton sidenavItem" data-id="#proposed">Proposal</a>
-        <a class="scrollButton sidenavItem" data-id="#survey">Our Survey</a>
+        <a class="sidenavItem" href="#proposed" data-id="#proposed">Proposal</a>
+        <a class="sidenavItem" href="#survey" data-id="#survey">Our Survey</a>
 
     </div>
 
     <div class="parallax">
         <div class="caption">
-            <span class="border">Scroll Down for Potato<a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
+            <span class="border">Scroll Down For Potatoes<a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
         </div>
     </div>
 
@@ -90,7 +90,9 @@
         </div>
     </div>
 
-    <button class="btn" id="survey" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
+    <div class="center">
+        <button class="btn" id="survey" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
+    </div>
     
 
 
