--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
     <div class="center">
         <button class="btn" id="survey" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
     </div>
+
+    <div class="graphContainer><img class="graph" href="images/TopProducers.jpg"></div>
     
 
 
