--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <button class="btn" id="survey" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
     </div>
 
-    <div class="graphContainer><img class="graph" href="images/TopProducers.jpg"></div>
+    <div class="graphContainer"><img class="graph" href="images/TopProducers.jpg"></img></div>
     
 
 
