added contact info to authors

--- a/authors.html
+++ b/authors.html
@@ -26,6 +26,13 @@
         <a class="sidenavItem" href="#survey" data-id="#survey">Our Survey</a>
 
     </div>
+
+    <div class="margincontainer">
+        <h3>Contact</h3>
+        <p>Ethan&nbsp;Mole <a href="mailto:mol0005@jmss.vic.edu.au">mol0005@jmss.vic.edu.au</a></p>
+        <p>Tom&nbsp;Blick <a href="mailto:bli0007@jmss.vic.edu.au">bli0007@jmss.vic.edu.au</a></p>
+        <p>Connor&nbsp;Russo <a href="mailto:rus0006@jmss.vic.edu.au">rus0006@jmss.vic.edu.au</a></p>
+    </div>
     
     <script src="script.js"></script>
     <footer>
