added conclusion page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <nav>
         <ul>
             <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
-            <li class="active"><a href="https://tomothy07.github.io">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="conclusion.html">Conclusion</a></li>
             
             <li class="rightAlign"><a href="authors.html">About the Authors</a></li>
             <li class="rightAlign"><a href="Testing.html">Testing Page</a></li>
