added temporary infographics to pages

--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
         </div>
     </div>
 
-
     <!--Infographic introduction-->
+    <div class="infographiccontainer">
+        <img class="infographic" src="images/intro.svg">
+    </div>
 
     <!--Actual infographic-->
+    <div class="infographiccontainer">
+        <img class="infographic" src="images/main.svg">
+    </div>
     
     <script src="script.js"></script>
     <footer>
