--- a/authors.html
+++ b/authors.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potato</title>
+    <title>Potato Authors</title>
     <link rel="stylesheet" href="sidenav.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -41,47 +41,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-<!--
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potato</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="sidenav.css">
-</head>
-
-<body>
-    <nav>
-        <ul>
-            <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
-            <li><a href="index.html">Home</a></li>
-            
-            <li class="rightAlign active"><a href="authors.html">About the Authors</a></li>
-        </ul>
-    </nav>
-    <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a class="sidenavItem" id="scrollToTop"><b>Home</b></a>
-        <a class="sidenavItem" href="#proposed" data-id="#proposed">Proposal</a>
-        <a class="sidenavItem" href="#survey" data-id="#survey">Our Survey</a>
-
-    </div>
-    
-    <script src="script.js"></script>
-    <footer>
-        <p>&copy; 2024 My Website. All rights reserved.</p>
-    </footer>
-</body>
-
-</html>
--->
