--- a/conclusion.html
+++ b/conclusion.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conclusion</title>
+    <title>Potato Conclusion</title>
     <link rel="stylesheet" href="sidenav.css">
     <link rel="stylesheet" href="style.css">
 </head>
