--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potato</title>
+    <title>Potato Home</title>
     <link rel="stylesheet" href="sidenav.css">
     <link rel="stylesheet" href="style.css">
 </head>
