removed authors page, fixed dropdown menu

--- a/conclusion.html
+++ b/conclusion.html
@@ -15,15 +15,15 @@
             <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="conclusion.html">Conclusion</a></li>
-            
-            <li class="rightAlign"><a href="authors.html">About the Authors</a></li>
         </ul>
     </nav>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a class="sidenavItem" id="scrollToTop"><b>temp</b></a>
-        <a class="sidenavItem" href="#proposed" data-id="#proposed">temp2</a>
-        <a class="sidenavItem" href="#survey" data-id="#survey">temp3</a>
+        <a class="sidenavItem" id="scrollToTop"><b>Top</b></a>
+        <a class="sideNavItem" href="#conclusion" data-id="#conclusion">Conclusion</a>
+        <a class="sidenavItem" href="#proposed" data-id="#proposed">Proposal</a>
+        <a class="sidenavItem" href="#survey" data-id="#survey">Survey</a>
+        <a class="sidenavItem" href="#bibliography" data-id="#bibliography">Bibliography</a>
 
     </div>
 
@@ -74,12 +74,18 @@
     <!--Findings of survey-->
 
     <!--Conclusion-->
+    <div id="conclusion">Conclusion</div>
 
     <!--Bibliography-->
+    <div id="bibliography">Bibliography</div>
 
     <script src="script.js"></script>
     <footer>
-        <p>&copy; 2024 My Website. All rights reserved.</p>
+        <h3>Contact</h3>
+        <p>Ethan&nbsp;Mole <a href="mailto:mol0005@jmss.vic.edu.au">mol0005@jmss.vic.edu.au</a></p>
+        <p>Tom&nbsp;Blick <a href="mailto:bli0007@jmss.vic.edu.au">bli0007@jmss.vic.edu.au</a></p>
+        <p>Connor&nbsp;Russo <a href="mailto:rus0006@jmss.vic.edu.au">rus0006@jmss.vic.edu.au</a></p>
+        <p>&copy; 2024 The Potato Project. All rights reserved.</p>
     </footer>
 </body>
 
