--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
             <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="conclusion.html">Conclusion</a></li>
-            
-            <li class="rightAlign"><a href="authors.html">About the Authors</a></li>
         </ul>
     </nav>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a class="sidenavItem" id="scrollToTop"><b>Home</b></a>
-        <a class="sidenavItem" href="#proposed" data-id="#proposed">Proposal</a>
-        <a class="sidenavItem" href="#survey" data-id="#survey">Our Survey</a>
+        <a class="sidenavItem" href="#introduction" data-id="#introduction">Introduction</a>
+        <a class="sidenavItem" href="#infographic" data-id="#infographic">Infographic</a>
 
     </div>
 
@@ -35,18 +33,22 @@
     </div>
 
     <!--Infographic introduction-->
-    <div class="infographiccontainer">
+    <div class="infographiccontainer" id="introduction">
         <img class="infographic" src="images/intro.svg">
     </div>
 
     <!--Actual infographic-->
-    <div class="infographiccontainer">
+    <div class="infographiccontainer" id="infographic">
         <img class="infographic" src="images/main.svg">
     </div>
     
     <script src="script.js"></script>
     <footer>
-        <p>&copy; 2024 My Website. All rights reserved.</p>
+        <h3>Contact</h3>
+        <p>Ethan&nbsp;Mole <a href="mailto:mol0005@jmss.vic.edu.au">mol0005@jmss.vic.edu.au</a></p>
+        <p>Tom&nbsp;Blick <a href="mailto:bli0007@jmss.vic.edu.au">bli0007@jmss.vic.edu.au</a></p>
+        <p>Connor&nbsp;Russo <a href="mailto:rus0006@jmss.vic.edu.au">rus0006@jmss.vic.edu.au</a></p>
+        <p>&copy; 2024 The Potato Project. All rights reserved.</p>
     </footer>
 </body>
 
