--- a/TotallyLegitWebpage.html
+++ b/TotallyLegitWebpage.html
@@ -120,7 +120,7 @@
     <div id="home-screen">
         <div>
             <button id="start-button" onclick="startGame()">Start</button>
-            <button id="quit" onclick="window.location.href='tomothy07.github.io'">Quit</button>
+            <button id="quit" onclick="window.location.href='index.html'">Quit</button>
         </div>
         <p style="border: 2px solid white; padding: 20px;"><b style="font-size: 32px;">Rules: </b><br><br>You have 30 seconds to click on as many potatoes as possible. Smaller potatoes reward twice as many points as bigger potatoes.</p>
     </div>
