--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potato Home</title>
+    <title>The Potato Project</title>
     <link rel="stylesheet" href="sidenav.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,7 +28,7 @@
     <!--Big title-->
     <div class="parallax">
         <div class="caption">
-            <span class="border">Scroll Down For Potatoes<a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
+            <span class="border">The Potato Project <a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
         </div>
     </div>
 
