added title icon

--- a/conclusion.html
+++ b/conclusion.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potato Conclusion</title>
+    <link rel="icon" type="image/x-icon" href="images/potato.ico">
     <link rel="stylesheet" href="sidenav.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,6 +33,9 @@
             <span class="border">Scroll Down For Potatoes<a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
         </div>
     </div>
+    
+    <!--Findings and conclusion-->
+    <div id="conclusion">Conclusion</div>   
 
     <!--Proposal-->
     <div class="zoomItem" id="proposed">
@@ -70,11 +74,6 @@
     <div class="center">
         <button class="btn" id="survey" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
     </div>    
-
-    <!--Findings of survey-->
-
-    <!--Conclusion-->
-    <div id="conclusion">Conclusion</div>
 
     <!--Bibliography-->
     <div id="bibliography">Bibliography</div>
