--- a/TotallyLegitWebpage.html
+++ b/TotallyLegitWebpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Falling Potatoes</title>
+    <link rel="icon" type="image/x-icon" href="images/potato.ico">
     <link rel="stylesheet" href="styles.css">
 
     <style>
