renamed links to make more sense

--- a/conclusion.html
+++ b/conclusion.html
@@ -14,16 +14,17 @@
     <nav>
         <ul>
             <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="conclusion.html">Conclusion</a></li>
+            <li><a href="index.html">Infographic</a></li>
+            <li class="active"><a href="conclusion.html">Findings</a></li>
         </ul>
     </nav>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a class="sidenavItem" id="scrollToTop"><b>Top</b></a>
-        <a class="sideNavItem" href="#conclusion" data-id="#conclusion">Conclusion</a>
+        <a class="sidenavItem" id="scrollToTop"><b>Title</b></a>
         <a class="sidenavItem" href="#proposed" data-id="#proposed">Proposal</a>
         <a class="sidenavItem" href="#survey" data-id="#survey">Survey</a>
+        <a class="sideNavItem" href="#findings" data-id="#findings">Findings</a>
+        <a class="sideNavItem" href="#conclusion" data-id="#conclusion">Conclusion</a>
         <a class="sidenavItem" href="#bibliography" data-id="#bibliography">Bibliography</a>
 
     </div>
@@ -33,9 +34,6 @@
             <span class="border">Scroll Down For Potatoes<a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
         </div>
     </div>
-    
-    <!--Findings and conclusion-->
-    <div id="conclusion">Conclusion</div>   
 
     <!--Proposal-->
     <div class="zoomItem" id="proposed">
@@ -74,6 +72,12 @@
     <div class="center">
         <button class="btn" id="survey" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
     </div>    
+
+    <!--Findings-->
+    <div id="findings">Findings</div>   
+
+    <!--Conclusion-->
+    <div id="conclusion">Conclusion</div>   
 
     <!--Bibliography-->
     <div id="bibliography">Bibliography</div>
