--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <nav>
         <ul>
             <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="conclusion.html">Conclusion</a></li>
+            <li class="active"><a href="index.html">Infographic</a></li>
+            <li><a href="conclusion.html">Findings</a></li>
         </ul>
     </nav>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a class="sidenavItem" id="scrollToTop"><b>Home</b></a>
+        <a class="sidenavItem" id="scrollToTop"><b>Title</b></a>
         <a class="sidenavItem" href="#introduction" data-id="#introduction">Introduction</a>
         <a class="sidenavItem" href="#infographic" data-id="#infographic">Infographic</a>
 
