added bibliography and update svg

--- a/findings.html
+++ b/findings.html
@@ -29,12 +29,6 @@
 
     </div>
 
-    <div class="parallax">
-        <div class="caption">
-            <span class="border">Scroll Down For Potatoes<a class="hiddenLink" href="TotallyLegitWebpage.html">🥔</a></span>
-        </div>
-    </div>
-
     <!--Proposal-->
     <div class="zoomItem" id="proposed">
         <div class="proposal">
@@ -77,10 +71,20 @@
     <div id="findings">Findings</div>   
 
     <!--Conclusion-->
-    <div id="conclusion">Conclusion</div>   
+    <div id="conclusion">Conclusion</div>
 
     <!--Bibliography-->
-    <div id="bibliography">Bibliography</div>
+    <div id="bibliography">
+        <h3>Bibliography</h3>
+        <p>Devaux, A., Goffart, JP., Kromann, P. et al. The Potato of the Future: Opportunities and Challenges in Sustainable Agri-food Systems. Potato Res. 64, 681–720 (2021). Retrieved from 
+            <a href="https://doi.org/10.1007/s11540-021-09501-4">https://doi.org/10.1007/s11540-021-09501-4</a></p>
+        <p>International Potato Center. (2018). Potato Facts and Figures. Retrieved from 
+            <a href="https://cipotato.org/potato/potato-facts-and-figures/">https://cipotato.org/potato/potato-facts-and-figures/</a></p>
+        <p>International Potato Center. (2018). Case for investment: Climate change adaptation. Retrieved from 
+            <a href="https://cipotato.org/climate-change/">https://cipotato.org/climate-change/</a></p>
+        <p>The Diggers Club. (2022). How to Grow Potatoes [Website]. Retrieved from 
+            <a href="https://www.diggers.com.au/blogs/learn/how-to-grow-potatoes">https://www.diggers.com.au/blogs/learn/how-to-grow-potatoes</a></p>
+    </div>
 
     <script src="script.js"></script>
     <footer>
