--- a/findings.html
+++ b/findings.html
@@ -63,8 +63,8 @@
     </div>
     
     <!--Link to survey-->
-    <div class="center">
-        <button class="btn" id="survey" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
+    <div class="center" id="survey">
+        <button class="btn" onclick="window.open('https://forms.gle/j3FN9BmqsBUDt7yN7', '_blank')">Take our survey!</button>
     </div>    
 
     <!--Findings-->
