--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a class="openbtn" onclick="openNav()" style="font-size: 125%;">&#9776;</a></li>
             <li class="active"><a href="index.html">Infographic</a></li>
-            <li><a href="findings.html">Findings</a></li>
+            <li><a href="findings.html">Proposal & Findings</a></li>
         </ul>
     </nav>
     <div id="mySidebar" class="sidebar">
